[package]
name = "raw-manga-reader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { workspace = true }
# manga-ocr-onnx = { path = "./manga-ocr-onnx" }
# tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-aptabase = "1.0"
log = "0.4"
base64-simd = "0.8.0"
thiserror = "2.0.12"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
ractor = { version = "0.15.6", features = ["async-trait"] }
tauri-plugin-log = "2"
tokio = { workspace = true }
manga-ocr = { path = "./crates/manga-ocr" }

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Make dev compile faster
[profile.dev.package."*"]
opt-level = 2


[workspace]
members = [
    "./",
    "crates/imgproc",
    "crates/manga-ocr",
    "crates/text-det",
    "manga-ocr-onnx",
]


[workspace.dependencies]
ort = { version = "=2.0.0-rc.10" }
image = { version = "0.25" }
ractor = { version = "0.15.6", features = ["async-trait"] }
tokio = { version = "1", features = ["full"] }