[package]
name = "manga-ocr-onnx"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
ort = { version = "~1.15", default-features = false, features = [
    # "half",
    "load-dynamic",
] }
image = "0.24"
anyhow = "1.0"
kelp = "0.4"
log = "0.4"
