[package]
name = "manga-ocr-onnx"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = { version = "=2.0.0-rc.9", default-features = false, features = [
    # "half",
    "download-binaries",
    # "load-dynamic",
] }
image = "0.25"
anyhow = "1.0"
log = "0.4"
tracing = "0.1.41"
candle-core = "0.8.1"
zune-image = "0.4.15"
zune-imageprocs = "0.4.15"
